# analytics-api

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  railway.json
boot/: docker-run.sh
src/: main.py
src/api/db/: session.py
src/api/events/: models.py  routing.py  schemas.py
