[project]
name = "analytics-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.122.0",
    "gunicorn>=23.0.0",
    "pip>=25.3",
    "psycopg[binary]>=3.3.1",
    "pydantic>=2.12.5",
    "python-decouple>=3.8",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "timescaledb>=0.0.4",
    "uvicorn>=0.38.0",
]
